openmediavault (5.5.12-1) stable; urgency=low

  * Issue #816: If you have assigned a comment to a user, you
    can't delete the comment.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 22 Sep 2020 02:38:41 +0200

openmediavault (5.5.11-1) stable; urgency=low

  * Update locales.
  * Do not allow to create NFS shares using shared folders with
    blanks in their relative path. SaltStack can't handle such
    bind mounts (https://github.com/saltstack/salt/issues/54508).
  * Issue #815: Disable quota if no quotas are configured for a device.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 17 Sep 2020 23:21:10 +0200

openmediavault (5.5.10-1) stable; urgency=low

  * Update locales.
  * Fix bugs in date/time page. The field 'Time servers' was not marked as
    required when 'Use NTP server' was enabled. The field 'Allowed clients'
    was marked as required when 'Use NTP server' was disabled.
  * Fix bug in omv-firstaid when setting a static IPv6 address.
  * Added the environment variables 'OMV_AVAHIDAEMON_ALLOW_INTERFACES',
    'OMV_AVAHIDAEMON_ALLOW_POINT_TO_POINT' and 'OMV_AVAHIDAEMON_ENABLE_REFLECTOR'
    to customize the Avahi/Zeroconf configuration for VPN.
  * File systems will not be mounted with the 'noexec' option anymore.
    Existing mount point configurations are not migrated.
  * Issue #800: Quotas are not configured after creating a file system.
  * Issue #810: Added the 'OMV_CHRONY_SERVER_POOL_DIRECTIVE' environment
    variable to configure the NTP server directive in chrony.conf.
    Default is 'server'.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 27 Aug 2020 08:09:21 +0200

openmediavault (5.5.9-1) stable; urgency=low

  * Update locales.
  * Issue #784: Use UDEV over /sys to get model and vendor information.
  * Issue #789: Read-only users or groups are not used in proftpd config.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 14 Aug 2020 15:31:45 +0200
